# VibeCheck

./: .gitignore  .vibecheck_rules.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test.tape  trailer.ps1  trailer_full.ps1  vibecheck.tape
.github/workflows/: ci.yml
benchmarks/: README.md
examples/: ai_hallucination_demo.py  auth_handler.py  config.yaml  go_bad.go  lazy_ai_demo.py  node_bad.js  payment_service.py  python_bad.py
tests/: test_ai_audit.py  test_cli.py  test_detector.py  test_memory.py
vibecheck/: __init__.py  __main__.py  main.py
vibecheck/core/: __init__.py  ast_engine.py  cache.py  detector.py  explainer.py  llm.py  memory.py  models.py  severity.py
vibecheck/hooks/: __init__.py  pre_commit.py
